--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>mall</title>
+    <title>mall111</title>
+    <!--<link rel="stylesheet" href="static/css/base.css">-->
+    <!--<link rel="stylesheet" href="static/css/index.css">-->
   </head>
   <body>
     <div id="app"></div>
