--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>mall111</title>
-    <!--<link rel="stylesheet" href="static/css/base.css">-->
-    <!--<link rel="stylesheet" href="static/css/index.css">-->
+    <title>趣买商城</title>
   </head>
   <body>
     <div id="app"></div>
