--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>mall111</title>
+    <title>mall</title>
     <!--<link rel="stylesheet" href="static/css/base.css">-->
     <!--<link rel="stylesheet" href="static/css/index.css">-->
   </head>
